--- a/public/index.ejs
+++ b/public/index.ejs
@@ -7,6 +7,11 @@
     <meta name="description" content="chat on js and nodejs free nad forever">
 </head>
 <body>
-    
+    <main>
+        <article>
+            <h1><%= title %></h1>
+            <p><%= text %></p>
+        </article>
+    </main>
 </body>
 </html>
