--- a/public/index.ejs
+++ b/public/index.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <meta name="description" content="chat on js and nodejs free nad forever">
-</head>
+    <link rel="shortcut icon" href="/img/chat.png" type="image/x-icon">
+  </head>
 <body>
     <main>
         <article>
@@ -19,7 +20,7 @@
             XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
           -->
           <div id="comments" style="width:100%;max-width:100%"></div>
-          <a href="https://super.qucu.ru/comments/" style="font-size: 17px;">https://super.qucu.ru/comments/</a>
+          <a href="http://localhost:3000/comments/" style="font-size: 17px;">https://super.qucu.ru/comments/</a>
           <script type="text/javascript">
           const site={
             origin: `${window.location.hash}`,
@@ -28,7 +29,7 @@
           const importantBag={id:"nasoberu",site:window.location};
           // const id='nasoberu';// important!!!
           const script =document.createElement('script');
-          const url ='https://qucu.ru/allow-cors';
+          const url ='http://localhost:3000/allow-cors';
           async function goComments(){
             await fetch(url,{
               origin:site.origin,
@@ -36,7 +37,7 @@
               referrer: site.referrer,
               referrerPolicy: "origin-when-cross-origin",
               mode:"cors",
-              credentials: "same-origin",
+              // credentials: "same-origin",
               cache: "no-store",
             }).then(response=>response.text()).then(result=>{
               document.querySelector('#comments').append(script);
