--- a/public/index.ejs
+++ b/public/index.ejs
@@ -37,7 +37,7 @@
               referrer: site.referrer,
               referrerPolicy: "origin-when-cross-origin",
               mode:"cors",
-              // credentials: "same-origin",
+              credentials: "same-origin",
               cache: "no-store",
             }).then(response=>response.text()).then(result=>{
               document.querySelector('#comments').append(script);
