--- a/public/index.ejs
+++ b/public/index.ejs
@@ -20,7 +20,7 @@
             XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
           -->
           <div id="comments" style="width:100%;max-width:100%"></div>
-          <a href="http://localhost:3000/comments/" style="font-size: 17px;">https://super.qucu.ru/comments/</a>
+          <a href="https://comments.qucu.ru/comments/" style="font-size: 17px;">https://comments.qucu.ru/comments/</a>
           <script type="text/javascript">
           const site={
             origin: `${window.location.hash}`,
@@ -29,7 +29,7 @@
           const importantBag={id:"nasoberu",site:window.location};
           // const id='nasoberu';// important!!!
           const script =document.createElement('script');
-          const url ='http://localhost:3000/allow-cors';
+          const url ='https://comments.qucu.ru/allow-cors';
           async function goComments(){
             await fetch(url,{
               origin:site.origin,
@@ -37,7 +37,7 @@
               referrer: site.referrer,
               referrerPolicy: "origin-when-cross-origin",
               mode:"cors",
-              // credentials: "same-origin",
+              credentials: "include",
               cache: "no-store",
             }).then(response=>response.text()).then(result=>{
               document.querySelector('#comments').append(script);
