--- a/public/index.ejs
+++ b/public/index.ejs
@@ -12,6 +12,7 @@
         <article>
             <h1><%= title %></h1>
             <p><%= text %></p>
+            <a href="https://github.com/amir248/chat">gitHub width this scripts</a>
         </article>
         <section>
             <!--
